--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -195,6 +195,20 @@
                 app:layout_constraintTop_toBottomOf="@+id/textViewLabelTrailer"
                 tools:layout_editor_absoluteX="10dp" />
 
+            <TextView
+                android:id="@+id/textViewLabelReviews"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Список отзывов"
+                android:textSize="20dp"
+                android:textColor="@android:color/holo_orange_light"
+                android:textStyle="bold"
+                android:visibility="visible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rvTrailerMovie" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvReviewsMovie"
                 android:layout_width="match_parent"
@@ -203,7 +217,7 @@
                 android:orientation="vertical"
                 android:nestedScrollingEnabled="false"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintTop_toBottomOf="@+id/rvTrailerMovie"
+                app:layout_constraintTop_toBottomOf="@+id/textViewLabelReviews"
                 tools:layout_editor_absoluteX="10dp" />
 
 
