--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -12,9 +12,9 @@
         android:id="@+id/tvPopularityMovie"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Top Rated"
-        android:gravity="left"
-        android:textColor="@color/black"
+        android:text="Popularity"
+        android:textStyle="bold"
+        android:textColor="@android:color/holo_orange_light"
         android:padding="5dp"
         android:textSize="22sp"
         android:layout_margin="15dp"
@@ -42,8 +42,9 @@
         android:layout_height="wrap_content"
         android:gravity="left"
         android:padding="5dp"
-        android:text="Popularity"
-        android:textColor="@color/black"
+        android:text="Top Rated"
+        android:textColor="@android:color/holo_orange_light"
+        android:textStyle="bold"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/switchMoviews"
