--- a/app/src/main/res/layout/fragment_about_author.xml
+++ b/app/src/main/res/layout/fragment_about_author.xml
@@ -40,7 +40,7 @@
                 app:srcCompat="@drawable/profile" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tvShowsFavorites"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
@@ -64,7 +64,7 @@
                 android:textColor="#ffffff"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView3"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
+                app:layout_constraintTop_toBottomOf="@+id/tvShowsFavorites" />
 
             <TextView
                 android:id="@+id/textView9"
