--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -34,12 +34,12 @@
         tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvShowsFavorites"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="left"
         android:padding="5dp"
-        android:text="Popularity"
+        android:text="Shows"
         android:textColor="@android:color/holo_orange_light"
         android:textStyle="bold"
         android:textSize="22sp"
