--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -9,6 +9,7 @@
 
 
     <ImageView
+        android:id="@+id/ivSplash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
