--- a/app/src/main/res/layout/fragment_two_screen.xml
+++ b/app/src/main/res/layout/fragment_two_screen.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Преимущество TMDB"
+        android:text="Преимущества TMDB"
         android:textStyle="bold"
         android:textColor="@color/teal_200"
         android:textSize="25sp"
