--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -14,7 +14,11 @@
             android:id="@+id/action_splashScreenFragment_to_viewPagerFragment"
             app:destination="@id/viewPagerFragment"
             app:popUpTo="@id/splashScreenFragment"
-            app:popUpToInclusive="true" />
+            app:popUpToInclusive="true"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_enter_anim"
+            app:popEnterAnim="@anim/nav_default_enter_anim"
+            app:popExitAnim="@anim/nav_default_enter_anim" />
         <action
             android:id="@+id/action_splashScreenFragment_to_homeFragment2"
             app:destination="@id/movieFragment" />
@@ -36,7 +40,8 @@
 
         <action
             android:id="@+id/action_movieFragment_to_movieDetailFragment"
-            app:destination="@id/movieDetailFragment" />
+            app:destination="@id/movieDetailFragment"
+            app:enterAnim="@anim/left" />
         <argument
             android:name="movie"
             app:argType="com.example.destination.model.movie.MovieResult" />
